# ai_roi_calculator

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: index.html
data/: sample_telemetry.json
examples/: README.md  support_triage.py
src/roi_tracker/: __init__.py  __main__.py  config.py  cost_fetcher.py  engine.py  ledger.py  report.py  risk_pricer.py  router.py
tests/: test_engine.py
