[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-roi-tracker"
version = "0.1.0"
description = "AI Operational Value Realization Engine - turns LLM telemetry into a risk-adjusted P&L"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Amit Batra" }]
keywords = ["llm", "finops", "roi", "ai", "cost", "observability"]
dependencies = []

[project.optional-dependencies]
pricing = ["litellm>=1.0.0"]
dev = ["pytest>=7.0.0"]

[project.scripts]
roi-tracker = "roi_tracker.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
