[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-roi-calculator"
version = "0.2.0"
description = "AI ROI Calculator - compare Human vs AI+HITL, risk-adjusted P&L, break-even projection, and hybrid recommendation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Amit Batra" }]
keywords = ["llm", "finops", "roi", "ai", "cost", "observability"]
dependencies = []

[project.optional-dependencies]
pricing = ["litellm>=1.0.0"]
dev = ["pytest>=7.0.0"]

[project.scripts]
ai-roi-calculator = "roi_tracker.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
